--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,6 +1,10 @@
-	<hr />
 	<div class="footer">
-		<div style="float: left;">seavpn.com</div>
+		
+		<div style="float: left;">
+			<a href="/">SeaVPN.com</a>
+			<div>support@seavpn.com</div>
+		</div>
+		
 		<div style="float: right;">&copy; 2013</div>
 	</div>
 
