--- a/templates/login.html
+++ b/templates/login.html
@@ -2,30 +2,34 @@
 
 {include file="header.html"}
 
-{if $error_msg != ""}
-<div class="error">{$error_msg}</div>
-{/if}
+<div class="submitform">
+	<div class="formtitle">{_("Log In")}</div>
+	
+	{if $error_msg != ""}
+	<div class="submiterror">{$error_msg}</div>
+	{/if}
 
-<form action="{$SCRIPT_NAME}?action=chk" method="post" class="login">
-	<div>{_("Email address:")}</div>
-	<div>
-		<input type="text" name="email" value="{$email}" />
-	</div>
-	
-	<div>{_("Password:")}</div>
-	<div>
-		<input type="password" name="loginpass" />
-	</div>
-	
-	<div class="submitform">
-		<input type="submit" value="{_('Login')}" />
-		<!--
-		<label for="remember">
-			<input type="checkbox" name="remember" id="remember"/>
-			{_("Remember me")}
-		</label>
-		-->
-	</div>
-</form>
+	<form action="{$SCRIPT_NAME}?action=chk" method="post" class="login">
+		<div class="desc">{_("Email address:")}</div>
+		<div>
+			<input type="text" name="email" value="{$email}" class="inputtext" />
+		</div>
+		
+		<div class="desc">{_("Password:")}</div>
+		<div>
+			<input type="password" name="loginpass" class="inputtext"  />
+		</div>
+		
+		<div class="submitform">
+			<input type="submit" value="{_('Login')}" />
+			<!--
+			<label for="remember">
+				<input type="checkbox" name="remember" id="remember"/>
+				{_("Remember me")}
+			</label>
+			-->
+		</div>
+	</form>
+</div>
 
 {include file="footer.html"}
