--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,7 @@ body {
 }
 a {
 	text-decoration: none;
+	outline: none;
 }
 nav {
 	margin: 1rem 0;
@@ -50,9 +51,15 @@ nav a:hover {
 }
 .submitform .submiterror {
 	color: #f00;
+	text-shadow: -1px -1px 0 #fcc;
 	border: ##FF666F;
 	border-radius: 3px;
-	padding: 5px 0 5px 15px;
+	background-color: #FFEFEE;
+	margin: 1.5em 30% 1.5em 30%;
+	width: 40%;
+	padding: 0.8em;
+	text-align: left;
+	
 }
 
 .submitform .formtitle {
