--- a/templates/account.html
+++ b/templates/account.html
@@ -16,7 +16,7 @@
 	{/foreach}
 {else}
 	<div class="buyone">
-		{_("You don't have any VPN account yet, <a href='vpn_buy.php'>click here to buy one</a>. Remember you can pay any cent for it if you have enough credits.")}
+		{_("You don't have any VPN account yet, <a href='account_new.php'>click here to buy one</a>. Remember you can pay any cent for it if you have enough credits.")}
 	</div>
 {/if}
 
