--- a/templates/header.html
+++ b/templates/header.html
@@ -28,6 +28,6 @@
 			<a href="reg.php">{_("Register")}</a>
 			{/if}
 			
-			<a href="account.php">{_("My VPN")}</a>
+			<a href="account.php">{_("My Account")}</a>
 			<a href="about.php">{_("About")}</a>
 		</nav>
