--- a/templates/account_new.html
+++ b/templates/account_new.html
@@ -1,35 +1,41 @@
+{append var="css" value="css/account_new.css"}
 {include file="header.html"}
 
-{if $error_msg != ""}
-<div class="error">{$error_msg}</div>
-{/if}
+<div class="submitform">
+	<div class="formtitle">{_("VPN account")}</div>
 
-<form action="{$SCRIPT_NAME}?action=save" method="post" class="login">
-	<div>{_("VPN username: ")}</div>
-	<div>
-		<input type="text" name="username" value="{$username}" />
-	</div>
-	<div class="tip">{_("Username can not be modify after purchase")}</div>
+	{if $error_msg != ""}
+	<div class="submiterror">{$error_msg}</div>
+	{/if}
+
+	<form action="{$SCRIPT_NAME}?action=save" method="post" class="accountnewform">
+		<div class="desc">{_("VPN username: ")}</div>
+		<div>
+			<input type="text" name="username" value="{$username}" class="inputtext" />
+		</div>
+		<div class="tip">{_("Username can not be modify after purchase")}</div>
+		
+		<div class="desc">{_("VPN password:")}</div>
+		<div>
+			<input type="text" name="password" value="{$password}" class="inputtext" />
+		</div>
+		<div class="tip">{_("You can use an easy password, in convenience for remember and enter.")}</div>
+		
+		<div class="desc">{_("Service:")}</div>
+		<div>
+			{foreach $services as $service}
+			<label for="serviceid_{$service.id}">
+				<input type="radio" name="serviceid" id="serviceid_{$service.id}" value="{$service.id}" />
+				{$service.desc|gettext}
+			</label>
+			{/foreach}
+		</div>
+		
+		<div class="submitform">
+			<input type="submit" value="{_('Buy it')}" />
+		</div>
+	</form>
 	
-	<div>{_("VPN password:")}</div>
-	<div>
-		<input type="text" name="password" value="{$password}" />
-	</div>
-	<div class="tip">{_("You can use an easy password, in convenience for remember and enter.")}</div>
-	
-	<div>{_("Service:")}</div>
-	<div>
-		{foreach $services as $service}
-		<label for="serviceid_{$service.id}">
-			<input type="radio" name="serviceid" id="serviceid_{$service.id}" value="{$service.id}" />
-			{$service.desc|gettext}
-		</label>
-		{/foreach}
-	</div>
-	
-	<div class="submitform">
-		<input type="submit" value="{_('Buy it')}" />
-	</div>
-</form>
+</div>
 
 {include file="footer.html"}
