--- a/templates/header.html
+++ b/templates/header.html
@@ -10,7 +10,7 @@
 		{/foreach}
 		
 		{foreach $js as $item}
-		<script type="text/javascript" src="{$item}" />
+		<script type="text/javascript" src="{$item}"></script>
 		{/foreach}
 	</head>
 	<body>
