--- a/templates/account.html
+++ b/templates/account.html
@@ -12,17 +12,17 @@
 			<a href="#" onclick="passwd({$vpn.id});return false;">{_("Change Password")}</a>
 		</div>
 		
-		<div>{_("VPN username: {$vpn.username}")}</div>
-		<div id="passinfo_{$vpn.id}">{_("VPN password: <span id='pass_{$vpn.id}'>{$vpn.password}")}</span></div>
+		<div>{_("VPN username:")} <span class="username">{$vpn.username}</span></div>
+		<div id="passinfo_{$vpn.id}">{_("VPN password:")} <span class="password" id='pass_{$vpn.id}'>{$vpn.password}</span></div>
 		<div id="changepass_{$vpn.id}" style="display: none;">
 			<span style="font-weight: bold;">{_("Input new password:")}</span>
 			<input type="text" size="10" value="" class="passinput" id="passinput_{$vpn.id}" onblur="passinput_blur({$vpn.id})" onkeypress="passinput_keypress(this, {$vpn.id})" />
 		</div>
 		
-		<div>{_("Usage statistic of this month:")}</div>
-		<div>{_("In: {$vpn.stat_monthly.inbandstr} Out: {$vpn.stat_monthly.outbandstr} Total: {$vpn.stat_monthly.usedbandstr}")}</div>
-		<div>{_("Used {$vpn.stat_monthly.percentused}% of {$vpn.totalbandstr}")}</div>
-		<div>{_("Total online time: {$vpn.stat_monthly.onlinetimestr}")}</div>
+		<div class="subtitle">{_("Usage statistic of this month:")}</div>
+		<div>{_("Download: {$vpn.stat_monthly.inbandstr} Upload: {$vpn.stat_monthly.outbandstr}")}</div>
+		<div class="percentbar" style="background-size: {$vpn.stat_monthly.percentused}% 100%;">{_("{$vpn.stat_monthly.usedbandstr} ({$vpn.stat_monthly.percentused}%) of {$vpn.totalbandstr} used")}</div>
+		<div>{_("Total online time:")} <span class="data">{$vpn.stat_monthly.onlinetimestr}</span></div>
 		<div>{_("Expire before {$vpn.validtostr}, about {$vpn.daysleft} days left")}</div>
 		
 	</div>
