--- a/templates/header.html
+++ b/templates/header.html
@@ -21,7 +21,13 @@
 
 		<nav>
 			{if $user.email != ''}
-			<a href="#">{$user.email}</a>
+			<a href="#" onclick="return false;">
+				{$user.email}
+				<div class="usercredit">
+					<div>{_("Balance: \${$user.balance_dollar}")}</div>
+					<div>{_("Credits: \${$user.credit_dollar}")}</div>
+				</div>
+			</a>
 			<a href="logout.php">{_("Log Out")}</a>
 			{else}
 			<a href="login.php">{_("Log In")}</a>
