增加帮助页面

--- a/templates/header.html
+++ b/templates/header.html
@@ -15,9 +15,9 @@
 	</head>
 	<body>
 
-		<div class="barner">
+		<a class="barner" href="/">
 			Sea<span style="logo">VPN</span>
-		</div>
+		</a>
 
 		<nav>
 			{if $user.email != ''}
@@ -35,5 +35,5 @@
 			{/if}
 			
 			<a href="account.php">{_("VPN Account")}</a>
-			<a href="about.php">{_("About")}</a>
+			<a href="help.php">{_("Help")}</a>
 		</nav>
