增加修改登录密码页面； 帮助页面中增加修改登录密码的帮助； 修改 user_mod 函数中的一个拼写错误；

--- a/templates/header.html
+++ b/templates/header.html
@@ -21,7 +21,7 @@
 
 		<nav>
 			{if $user.email != ''}
-			<a href="#" onclick="return false;">
+			<a href="userpass.php">
 				{$user.email}
 				<div class="usercredit">
 					<div>{_("Balance: \${$user.balance_dollar}")}</div>
