--- a/templates/help.html
+++ b/templates/help.html
@@ -10,6 +10,9 @@
 	
 	<!-- 如何续费/修改密码 -->
 	{include file="help_accountaction.html"}
+	
+	<!-- 如何修改登录密码 -->
+	{include file="help_loginpassword.html"}
 
 	<!-- 联系我们 -->
 	{include file="help_contact.html"}
