国际化帮助页面

--- a/templates/help_loginpassword.html
+++ b/templates/help_loginpassword.html
@@ -1,5 +1,5 @@
-<h3 onclick="help_toggle('loginpassword')">Where can I modify my login password?</h3>
+<h3 onclick="help_toggle('loginpassword')">{_("Where can I modify my login password?")}</h3>
 
 <div class="content" id="help_loginpassword">
-	<p>Click you account name on the left of navigation menu, then change your login password.</p>
+	<p>{_("Click you account name on the left of navigation menu, then change your login password.")}</p>
 </div>
