--- a/templates/help_accountaction.html
+++ b/templates/help_accountaction.html
@@ -1,9 +1,9 @@
-<h3 onclick="help_toggle('accountaction')">How can I renew my VPN or change VPN password?</h3>
+<h3 onclick="help_toggle('accountaction')">{_("How can I renew my VPN or change VPN password?")}</h3>
 
 <div class="content" id="help_accountaction">
-	<p>Move your mouse to the top right of an VPN information tab, then the renew/change password button popup.</p>
+	<p>{_("Move your mouse to the top right of an VPN information tab, then the renew/change password button popup.")}</p>
 	
-	<img alt="Screenshot of renew/change password button" src="imgs/help/accountaction_01.png" />
+	<img alt="{_('Screenshot of renew/change password button')}" src="imgs/help/{$lang}/accountaction_01.png" />
 </div>
 	
 	
