--- a/templates/account_new.html
+++ b/templates/account_new.html
@@ -32,7 +32,7 @@
 		</div>
 		
 		<div class="submitform">
-			<input type="submit" value="{_('Buy it')}" />
+			<input type="submit" value='{_("Buy it")}' />
 		</div>
 	</form>
 	
