--- a/templates/help_balance.html
+++ b/templates/help_balance.html
@@ -4,7 +4,7 @@
 	
 	<p>{_("After login, move you mouse over your email address on the left of the navigation menu, then the account balance windows will appears.")}</p>
 	
-	<img alt="{_('Screenshot of balance information')}" src="imgs/help/{$lang}/balance_01.png"/>
+	<img alt='{_("Screenshot of balance information")}' src="imgs/help/{$lang}/balance_01.png"/>
 </div>
 
 
