--- a/templates/login.html
+++ b/templates/login.html
@@ -21,7 +21,7 @@
 		</div>
 		
 		<div class="submitform">
-			<input type="submit" value="{_('Login')}" />
+			<input type="submit" value='{_("Login")}' />
 			<!--
 			<label for="remember">
 				<input type="checkbox" name="remember" id="remember"/>
