--- a/templates/userpass.html
+++ b/templates/userpass.html
@@ -24,7 +24,7 @@
 		</div>
 		
 		<div class="submitform">
-			<input type="submit" value="{_('Submit')}" />
+			<input type="submit" value='{_("Submit")}' />
 		</div>
 	</form>
 </div>
