--- a/templates/help_accountaction.html
+++ b/templates/help_accountaction.html
@@ -3,7 +3,7 @@
 <div class="content" id="help_accountaction">
 	<p>{_("Move your mouse to the top right of an VPN information tab, then the renew/change password button popup.")}</p>
 	
-	<img alt="{_('Screenshot of renew/change password button')}" src="imgs/help/{$lang}/accountaction_01.png" />
+	<img alt='{_("Screenshot of renew/change password button")}' src="imgs/help/{$lang}/accountaction_01.png" />
 </div>
 	
 	
