--- a/templates/paypal_confirm.html
+++ b/templates/paypal_confirm.html
@@ -5,7 +5,7 @@
 	<div>
 		<p>{_("Setting up the service you purchased, please wait...")}</p>
 		<p>{_("If your have any problem, please contact us")}</p>
-		<p>{_("If browser stop responding, <a href='{$url}'>please click me</a>")}</p>
+		<p>{sprintf(_("If browser stop responding, <a href='%s'>please click me</a>"), {$url})}</p>
 	</div>
 	
 	<script type="text/javascript">
