--- a/templates/reg.html
+++ b/templates/reg.html
@@ -24,7 +24,7 @@
 		</div>
 		
 		<div class="submitform">
-			<input type="submit" value="{_('Register')}" />
+			<input type="submit" value='{_("Register")}' />
 		</div>
 	</form>
 </div>
