增加服务器列表页面

--- a/templates/header.html
+++ b/templates/header.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 	<head>
-		<title>{$title}</title>
+		<title>{$title} - SeaVPN</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<link rel="stylesheet" href="css/main.css" type="text/css" media="all" />
 		
@@ -34,5 +34,6 @@
 			{/if}
 			
 			<a href="account.php">{_("VPN Account")}</a>
+			<a href="server.php">{_("Servers")}</a>
 			<a href="help.php">{_("Help")}</a>
 		</nav>
