调整账户余额和服务器列表的显示效果

--- a/css/main.css
+++ b/css/main.css
@@ -57,6 +57,10 @@ nav a:hover .usercredit {
 	margin-top: -0.5em;
 	padding: 0.5em;
 	text-shadow: none;
+	line-height: 1.5em;
+}
+.usercredit span {
+	float: right;
 }
 
 .barner {
