--- a/css/server.css
+++ b/css/server.css
@@ -3,6 +3,10 @@
 	border-collapse: collapse;
 	text-align: center;
 }
+.servers td {
+	height: 3em;
+	
+}
 .servers td, .servers th {
 	border: 1px solid #B5CFE0;
 	padding: 0.2em;
@@ -20,7 +24,7 @@ span, tr, td, th, table {
 	transition: all 0.4s ease 0.01s;
 }
 .servers tr:hover td {
-	text-shadow: 0px 0px 1px #0f0;
+	text-shadow: 0px 0px 0px #000;
 }
 
 .servers .affirmative {
