增加电子邮件地址配置

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,8 +1,8 @@
 	<div class="footer">
 		
 		<div style="float: left;">
-			<a href="/">SeaVPN.com</a>
-			<div>support@seavpn.com</div>
+			<a href="/">{$SERVER_NAME}</a>
+			<div>{$support_email}</div>
 		</div>
 		
 		<div style="float: right;">&copy; 2013</div>
