--- a/templates/help_contact.html
+++ b/templates/help_contact.html
@@ -1,7 +1,7 @@
 <h3 onclick="help_toggle('contact')">{_("I have other problems, how can I get contact to you?")}</h3>
 
 <div class="content" id="help_contact">
-	<p>{_("Our Email address is on the left below the page, it is <span class='item'>support@seavpn.com</span>. You can send us an email if you have any problem.")}</p>
+	<p>{_("Our Email address is on the left below the page, it is <span class='item'>$support_email</span>. You can send us an email if you have any problem.")}</p>
 </div>
 	
 	
