增加网站名字配置选项；增加帮助页面的标题

--- a/templates/help.html
+++ b/templates/help.html
@@ -1,6 +1,9 @@
 {append var="css" value="css/help.css"}
 {append var="js" value="js/jquery.js"}
 {append var="js" value="js/help.js"}
+
+{assign var="title" value={_("Help")}}
+
 {include file="header.html"}
 
 <div class="help">
