用户登录之后才能查看服务器列表页面

--- a/templates/header.html
+++ b/templates/header.html
@@ -34,6 +34,10 @@
 			{/if}
 			
 			<a href="account.php">{_("VPN Account")}</a>
+			
+			{if $user.email != ''}
 			<a href="server.php">{_("Servers")}</a>
+			{/if}
+			
 			<a href="help.php">{_("Help")}</a>
 		</nav>
