--- a/templates/reg.html
+++ b/templates/reg.html
@@ -23,6 +23,11 @@
 			<input type="password" name="loginpass2" class="inputtext" />
 		</div>
 		
+		<div class="desc">{_("Invite Code:")}</div>
+		<div>
+			<input type="text" name="invitecode" class="inputtext" value="{$invitecode}"/>
+		</div>
+		
 		<div class="desc">{_("CAPTCHA:")}</div>
 		<script type="text/javascript">
 		var RecaptchaOptions = {
