--- a/templates/order_preview.html
+++ b/templates/order_preview.html
@@ -19,7 +19,7 @@
 			<td><strong>{$order.desc}</strong></td>
 		</tr>
 		<tr>
-			<td>{_("Service price: ")}</td>
+			<td style="word-break: keep-all; white-space: no-wrap;">{_("Service price: ")}</td>
 			<td>${$order.price}</td>
 		</tr>
 		<tr>
