--- a/templates/header.html
+++ b/templates/header.html
@@ -23,8 +23,8 @@
 			<a href="userpass.php">
 				{$user.email}
 				<div class="usercredit">
-					<div>{_("Balance:")} <span>{$user.balance_dollar}</span></div>
-					<div>{_("Credits:")} <span>{$user.credit_dollar}</span></div>
+					<div>{_("Balance:")} <span>{$CURRENCY_SYMBOL}{$user.balance_dollar}</span></div>
+					<div>{_("Credits:")} <span>{$CURRENCY_SYMBOL}{$user.credit_dollar}</span></div>
 				</div>
 			</a>
 			<a href="logout.php">{_("Log Out")}</a>
