补充邀请码页面的几个中文字串

--- a/templates/invitecode.html
+++ b/templates/invitecode.html
@@ -24,7 +24,7 @@
 			{/if}
 			
 			<td>
-				<a href="reg.php?invitecode={$code.code}">Register Link</a>
+				<a href="reg.php?invitecode={$code.code}">{_("Register Link")}</a>
 			</td>
 			
 			<td>
