为服务器列表的表头增加鼠标悬停样式以显示此表格可以排序

--- a/css/server.css
+++ b/css/server.css
@@ -16,6 +16,10 @@
 	border: 1px solid #ccf;
 }
 
+.servers tr th {
+	cursor: pointer;
+}
+
 span, tr, td, th, table {
 	transition: all 1s ease 0.01s;
 }
